[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/board_logic/controller/cake.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/button_font.tres" type="DynamicFont" id=3]

[node name="Cake" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GetCake" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -32.0
margin_right = 372.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="GetCake"]
margin_right = 644.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Buy a cake for 30 cookies"
align = 1

[node name="Buttons" type="HBoxContainer" parent="GetCake"]
editor/display_folded = true
margin_top = 62.0
margin_right = 644.0
margin_bottom = 97.0

[node name="Ok" type="Button" parent="GetCake/Buttons"]
margin_right = 168.0
margin_bottom = 35.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_OK"

[node name="Spacer" type="Control" parent="GetCake/Buttons"]
margin_left = 172.0
margin_right = 428.0
margin_bottom = 35.0
rect_min_size = Vector2( 256, 0 )

[node name="Abort" type="Button" parent="GetCake/Buttons"]
margin_left = 432.0
margin_right = 644.0
margin_bottom = 35.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_CANCEL"

[node name="BuyCake" type="VBoxContainer" parent="."]
visible = false
margin_left = 512.0
margin_top = 328.0
margin_right = 908.0
margin_bottom = 445.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Amount" type="Label" parent="BuyCake"]
margin_right = 396.0
margin_bottom = 58.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="HSlider" type="HSlider" parent="BuyCake"]
margin_top = 62.0
margin_right = 396.0
margin_bottom = 78.0
rect_min_size = Vector2( 150, 0 )
min_value = 1.0
value = 1.0
ticks_on_borders = true

[node name="Buttons" type="HBoxContainer" parent="BuyCake"]
margin_top = 82.0
margin_right = 396.0
margin_bottom = 117.0
rect_min_size = Vector2( 260, 0 )
custom_constants/separation = 16

[node name="Ok" type="Button" parent="BuyCake/Buttons"]
margin_right = 168.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_OK"

[node name="Abort" type="Button" parent="BuyCake/Buttons"]
margin_left = 184.0
margin_right = 396.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_CANCEL"
[connection signal="pressed" from="GetCake/Buttons/Ok" to="." method="_on_GetCake_pressed"]
[connection signal="pressed" from="GetCake/Buttons/Abort" to="." method="_on_GetCake_abort"]
[connection signal="pressed" from="BuyCake/Buttons/Ok" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="BuyCake/Buttons/Abort" to="." method="_on_Abort_pressed"]
